1) Added version two of the “Astria” theme. Includes right aligned nicknames. 2) Added /spam as a replacement for /facepalm to demonstrate multiple line scripts. Probably not good idea to use this command in an active channel. 3) The topic bar for each pre-packaged theme no longer defines a specific font size for the display. It uses the size defined in preferences instead.

--- a/Resources/Styles/Matrix by bogo_lode/design.css
+++ b/Resources/Styles/Matrix by bogo_lode/design.css
@@ -67,7 +67,7 @@ a:hover {
   color: #00ff00;
   z-index: 400;
   opacity: 0.85;
-  font: 9px Monaco;
+  font: Monaco;
   position: fixed;
   background: #003300;
   background: -webkit-gradient(linear, left top, left bottom, from(#003300), to(#003300));
